[package]
name = "api-proxy-debug"
version = "0.1.0"
edition = "2024"
description = "API proxy debug tool for intercepting and logging AI model API calls"
license = "MIT"

[[bin]]
name = "api-proxy-debug"
path = "src/main.rs"

[dependencies]
# Pingora reverse proxy
pingora = { version = "0.8", features = ["lb", "rustls"] }
pingora-core = { version = "0.8", features = ["rustls"] }
pingora-http = "0.8"
pingora-proxy = { version = "0.8", features = ["rustls"] }

# CLI
clap = { version = "4.6", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
bytes = "1"
http = "1.0"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.102"
